--- a/config.yml
+++ b/config.yml
@@ -1,128 +1,183 @@
-# Controls whether resoucepacks are sent to users. If you do not want any custom textures, set this to false
-useDefaultResourcepack: true
+#  Quality Armory: A quality gun plugin similar to CrackShot.
 
-#Controls whether a gun will have unlimited ammo
+
+#FAQ:
+#Q: I do not want to use your resourcepack. How do I disable it?
+#A: Set "useDefaultResourcepack" to false if you do not want any resourcepacks. If you want to use another resourcepack instead, set "DefaultResoucepackOverride" to true and replace "DefaultResoucepack" with the link to the resourcepack you want to use.
+
+#Q: I want to disable friendly fire, but the "FriendlyFireEnabled" value does not do anything
+#A: Friendly fire uses Parties to determine who is a part of the same group. Download "Parties" to enable this feature
+
+#Q: I want guns to degrade as they are used.
+#A: Set "EnableWeaponDurability" to true. Note that old guns will break because of this, so users will need to craft/buy new guns.
+
+#Q:I do not want users to be able to shoot through leaves
+#A: Set the "leaves" value under "BlockBullets" to true
+
+#Q:When players join, I want them to automatically download the resourcepack.
+#A: Set "sendOnJoin" to true to force all users to use the resourcepack
+
+#Q: I want the bullet count to show on the items icon.
+#A: Set "enableVisableBulletCounts" to true. Note that minecraft was not built to handle stacks of hoes, so there is a CHANCE for that the gun may get glitched or duplicated. 
+
+#Q: My server is lagging because there are too many particles when shooting
+#A: Increase "BulletTrailsSpacing" from 0.5 to 1 or 2.
+
+#Q: One of your guns is overpowered/too cheap/ unbalanced
+#A: You can configure the price, damage, and crafting ingredients under the "Weapon","Ammo","Misc", and "crafting" tabs
+
+#Q: I want to add new guns/ammo to the plugin
+#A: Follow this tutoiral: https://www.spigotmc.org/wiki/how-to-create-new-guns-with-quality-armory/
+
+
+
+FriendlyFireEnabled: false
+useDefaultResourcepack: true
 UnlimitedPistolAmmo: false
 UnlimitedShotgunAmmo: false
 UnlimitedRifleAmmo: false
 UnlimitedSMGAmmo: false
 UnlimitedSniperAmmo: false
 UnlimitedRocketAmmo: false
-#Detmines if guns should degrade after every shot. Once durability is 0, the gun will no longer fire
 EnableWeaponDurability: false
-
-#Bullet detection step. Usefull for checking if a bullet hit a corner of a block.
 BulletDetection:
-  step: 0.10
-# In case you do not want bullets firing through leaves, water, halfslabs or other blocks, you can disable it here.
+  step: 0.1
 BlockBullets:
   door: false
   halfslabs: false
   leaves: false
   water: false
-#Controls the spacing between bullet particles
-BulletTrailsSpacing: 0.5
-#In case you do not want to let anvils control the gun crafting GUI
 overrideAnvil: false
-#Controls is resoucepacks are sent right when they join
 sendOnJoin: false
-#Determines if bullet trains should be allowed
 enableBulletTrails: true
-#Determines if item amounts are displayed on the itemstack
-enableVisableBulletCounts: true
-#Determines if a gun should be reloaded when the player swaps hands
+BulletTrailsSpacing: 0.5
+enableVisableBulletCounts: false
 enableReloadingWhenSwapToOffhand: true
-#The default gun type. DIAMOND_HOE is recommended
-gunMaterialType: DIAMOND_HOE
-#Determines the resoucepack that should be used. If you want to use your own resoucepack, set the override to true
-DefaultResoucepackOverride: false
-DefaultResoucepack: https://www.dropbox.com/s/uztx0depegg2hat/QualityArmory%201.5.zip?dl=1
-#Determines if rightclicking should enable ironsights.
-IronSightsOnRightCLick: false
-#Determines if RPGS or grenades can damage terrain
 enableExplosionDamage: false
-#Determines the crafting recipe for guns
+enableExplosionDamageDrop: false
+Bullet-Particle-Type: CLOUD
+ACCEPTED-BULLET-PARTICLE-VALUES: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Particle.html
+gunMaterialType: DIAMOND_HOE
+DefaultResoucepackOverride: false
+DefaultResoucepack: https://www.dropbox.com/s/wsg2sl5vmclw921/QualityArmory%201.8.zip?dl=1
+IronSightsOnRightCLick: false
 Crafting:
-  Ammo556: &id001
+  Ammo556: &id061
   - IRON_INGOT,0,1
   - SULPHUR,0,1
   - REDSTONE,0,1
-  Ammo9mm: *id001
-  AmmoBuckshot: *id001
+  Ammo9mm: *id061
+  AmmoBuckshot: *id061
   AmmoRPG:
   - IRON_INGOT,0,4
   - SULPHUR,0,6
   - REDSTONE,0,1
-  p30: &id002
+  P30: &id062
   - IRON_INGOT,0,5
   - REDSTONE,0,2
-  MP5K: *id002
-  AK47: &id004
+  PKP: *id062
+  MP5K: *id062
+  AK47: &id064
   - IRON_INGOT,0,12
   - WOOD,0,2
   - REDSTONE,0,5
-  M16: &id003
+  M16: &id063
   - IRON_INGOT,0,15
   - REDSTONE,0,5
-  Remmington: *id003
+  Remmington: *id063
+  FNFal: *id063
   RPG:
   - IRON_INGOT,0,32
   - REDSTONE,0,10
-  SW1911: *id002
-  M40: *id004
-  Enfield: &id005
+  UMP: *id062
+  SW1911: *id062
+  M40: *id064
+  Enfield: &id065
   - IRON_INGOT,0,12
   - GOLD_INGOT,0,2
   - REDSTONE,0,5
-  Henry: *id005
-  MouserC96: *id002
-  UMP:
-  - IRON_INGOT,0,5
-  - REDSTONE,0,2
+  Henry: *id065
+  MouserC96: *id062
   Grenades:
   - IRON_INGOT,0,6
   - SULPHUR,0,10
-  P30: &id006
-  - IRON_INGOT,0,5
-  - REDSTONE,0,2
-  PKP: *id006
-#Some default values for guns. In case you want to change the balance of the guns
+  Dragunov: *id064
+  Spas: *id063
+Ammo:
+  '556':
+    Price: 5.0
+  9mm:
+    Price: 2.0
+  Buckshot:
+    Price: 5.0
+  RPG:
+    Price: 100.0
 Weapon:
   P30:
     Durability: 500
     Damage: 3
-  MP5K:
-    Durability: 1000
-    Damage: 1
-  AK47:
-    Durability: 1000
-    Damage: 3
-  M16:
-    Durability: 1000
-    Damage: 3
-  Remmington:
-    Durability: 500
-    Damage: 1
-  RPG:
-    Durability: 100
-  SW1911:
-    Durability: 500
-    Damage: 2
-  M40:
-    Durability: 500
-    Damage: 5
-  Enfield:
-    Durability: 500
-    Damage: 2
-  Henry:
-    Durability: 500
-    Damage: 3
-  MouserC96:
-    Durability: 500
-    Damage: 2
-  UMP:
-    Durability: 1000
-    Damage: 2
+    Price: 500.5
   PKP:
     Durability: 500
     Damage: 3
+    Price: 2000.0
+  MP5K:
+    Durability: 1000
+    Damage: 1
+    Price: 800.0
+  AK47:
+    Durability: 1000
+    Damage: 3
+    Price: 1000.0
+  M16:
+    Durability: 1000
+    Damage: 3
+    Price: 1000.0
+  Remmington:
+    Durability: 500
+    Damage: 1
+    Price: 1000.0
+  FNFal:
+    Durability: 1000
+    Damage: 1
+    Price: 1000.0
+  RPG:
+    Durability: 100
+  rPG:
+    Price: 5000.0
+  UMP:
+    Durability: 1000
+    Damage: 2
+    Price: 1000.0
+  SW1911:
+    Durability: 500
+    Damage: 2
+    Price: 600.0
+  M40:
+    Durability: 500
+    Damage: 5
+    Price: 1000.0
+  Enfield:
+    Durability: 500
+    Damage: 2
+    Price: 500.0
+  Henry:
+    Durability: 500
+    Damage: 3
+    Price: 1000.0
+  MouserC96:
+    Durability: 500
+    Damage: 2
+    Price: 400.0
+  Grenade:
+    Price: 800.0
+    radiusdamage: 10.0
+    radius: 5.0
+  Dragunov:
+    Durability: 1000
+    Damage: 6
+    Price: 1200.0
+  Spas:
+    Durability: 1000
+    Damage: 1
+    Price: 1200.0
