--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 main: me.zombie_striker.qg.Main
-version: 1.1.63
+version: 1.1.64
 name: QualityArmory
 commands:
   QualityArmory:
@@ -24,6 +24,6 @@ permissions:
      children:
        qualityarmory.craft: true
        qualityarmory.shop: true
-softdepend: [Vault, Parties, WorldGuard]
+softdepend: [Vault, Parties, WorldGuard, ViaVersion, ViaRewind]
 author:
    Zombie_Striker
