--- a/config.yml
+++ b/config.yml
@@ -55,7 +55,7 @@ enableVisableBulletCounts: false
 enableReloadingWhenSwapToOffhand: true
 enableExplosionDamage: false
 enableExplosionDamageDrop: false
-Bullet-Particle-Type: CLOUD
+Bullet-Particle-Type: FIREWORKS_SPARK
 ACCEPTED-BULLET-PARTICLE-VALUES: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Particle.html
 gunMaterialType: DIAMOND_HOE
 DefaultResoucepackOverride: false
@@ -112,72 +112,3 @@ Ammo:
     Price: 5.0
   RPG:
     Price: 100.0
-Weapon:
-  P30:
-    Durability: 500
-    Damage: 3
-    Price: 500.5
-  PKP:
-    Durability: 500
-    Damage: 3
-    Price: 2000.0
-  MP5K:
-    Durability: 1000
-    Damage: 1
-    Price: 800.0
-  AK47:
-    Durability: 1000
-    Damage: 3
-    Price: 1000.0
-  M16:
-    Durability: 1000
-    Damage: 3
-    Price: 1000.0
-  Remmington:
-    Durability: 500
-    Damage: 1
-    Price: 1000.0
-  FNFal:
-    Durability: 1000
-    Damage: 1
-    Price: 1000.0
-  RPG:
-    Durability: 100
-  rPG:
-    Price: 5000.0
-  UMP:
-    Durability: 1000
-    Damage: 2
-    Price: 1000.0
-  SW1911:
-    Durability: 500
-    Damage: 2
-    Price: 600.0
-  M40:
-    Durability: 500
-    Damage: 5
-    Price: 1000.0
-  Enfield:
-    Durability: 500
-    Damage: 2
-    Price: 500.0
-  Henry:
-    Durability: 500
-    Damage: 3
-    Price: 1000.0
-  MouserC96:
-    Durability: 500
-    Damage: 2
-    Price: 400.0
-  Grenade:
-    Price: 800.0
-    radiusdamage: 10.0
-    radius: 5.0
-  Dragunov:
-    Durability: 1000
-    Damage: 6
-    Price: 1200.0
-  Spas:
-    Durability: 1000
-    Damage: 1
-    Price: 1200.0
