--- a/config.yml
+++ b/config.yml
@@ -31,6 +31,7 @@
 ENABLE-DEBUG: false
 useDefaultResourcepack: true
 sendOnJoin: false
+sendTitleOnJoin: false
 DefaultResoucepackOverride: false
 DefaultResoucepack: https://www.dropbox.com/s/3bllojuzjpbbxto/QualityArmoryv1.0.11.zip?dl=1
 hideTextureWarnings: false
