--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 main: me.zombie_striker.qg.Main
-version: 1.1.79
+version: 1.1.80
 name: QualityArmory
 commands:
   QualityArmory:
@@ -22,6 +22,7 @@ permissions:
        qualityarmory.default: true
        qualityarmory.debugmessages: true
    qualityarmory.default:
+     default: true
      description: Gives access to all PixelPrinter commands
      children:
        qualityarmory.craft: true
