--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 main: me.zombie_striker.qg.Main
-version: 1.1.95
+version: 1.1.97
 name: QualityArmory
 commands:
   QualityArmory:
@@ -28,6 +28,6 @@ permissions:
       qualityarmory.craft: true
       qualityarmory.shop: true
       qualityarmory.usegun: true
-softdepend: [Vault, Parties, WorldGuard, ViaVersion, ViaRewind]
+softdepend: [Vault, Parties, WorldGuard, ViaVersion, ViaRewind, LightAPI]
 author:
    Zombie_Striker
