--- a/plugin.yml
+++ b/plugin.yml
@@ -28,6 +28,6 @@ permissions:
       qualityarmory.craft: true
       qualityarmory.shop: true
       qualityarmory.usegun: true
-softdepend: [Vault, Parties, WorldGuard, ViaVersion, ViaRewind, LightAPI]
+softdepend: [Vault, Parties, WorldGuard, ViaVersion, ViaRewind, LightAPI, Citizens]
 author:
    Zombie_Striker
