--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,6 @@
 main: me.zombie_striker.qg.Main
-version: 1.1.106
+version: 1.1.108
+api-version: 1.13
 name: QualityArmory
 commands:
   QualityArmory:
