--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
-main: me.zombie_striker.qg.Main
-version: 1.1.119
+main: me.zombie_striker.qg.QAMain
+version: 1.1.120
 api-version: 1.13
 name: QualityArmory
 commands:
