--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 main: me.zombie_striker.qg.QAMain
-version: 1.1.130
+version: 1.1.134
 api-version: 1.13
 name: QualityArmory
 commands:
@@ -15,6 +15,7 @@ permissions:
     description: 'Gives access to all admin commands for QA'
     children:
       qualityarmory.give: true
+      qualityarmory.drop: true
       qualityarmory.create: true
       qualityarmory.createnewitem: true
       qualityarmory.reload: true
