--- a/pom.xml
+++ b/pom.xml
@@ -1,172 +1,232 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>me.zombie_striker</groupId>
-	<artifactId>qg</artifactId>
-	<version>1.1.138</version>
-	<name>QualityArmory</name>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>me.zombie_striker</groupId>
+    <artifactId>qg</artifactId>
+    <version>1.1.139</version>
+    <name>QualityArmory</name>
 
-	<repositories>
+    <repositories>
 
-		<repository>
-			<id>jitpack.io</id>
-			<url>https://jitpack.io</url>
-		</repository>
 
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-		</repository>
+        <!---<repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+        </repository> -
 
-		<repository>
-			<id>vault-repo</id>
-			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
-		</repository>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository> -->
 
-		<repository>
-			<id>sk89q-repo</id>
-			<url>http://maven.sk89q.com/repo/</url>
-		</repository>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
 
-		<repository>
-			<id>viaversion-repo</id>
-			<url>https://repo.viaversion.com</url>
-		</repository>
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+        </repository>
 
-		<repository>
-			<id>citizens-repo</id>
-			<url>http://repo.citizensnpcs.co</url>
-		</repository>
+        <repository>
+            <id>sk89q-repo</id>
+            <url>http://maven.sk89q.com/repo/</url>
+        </repository>
 
-		<repository>
-			<id>dmulloy2-repo</id>
-			<url>http://repo.dmulloy2.net/nexus/repository/public/</url>
-		</repository>
+        <repository>
+            <id>viaversion-repo</id>
+            <url>https://repo.viaversion.com</url>
+        </repository>
 
-		<repository>
-			<id>everything</id>
-			<url>http://repo.citizensnpcs.co/</url>
-		</repository>
+        <repository>
+            <id>citizens-repo</id>
+            <url>http://repo.citizensnpcs.co</url>
+        </repository>
 
-	</repositories>
+        <repository>
+            <id>dmulloy2-repo</id>
+            <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+        </repository>
 
-	<dependencies>
+        <repository>
+            <id>everything</id>
+            <url>http://repo.citizensnpcs.co/</url>
+        </repository>
 
-		<!--Spigot API -->
-		<dependency>
-			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot</artifactId>
-			<version>1.14.1-R0.1-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
+    </repositories>
 
-		<!-- Vault API -->
-		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
-			<artifactId>VaultAPI</artifactId>
-			<version>1.7</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.bukkit</groupId>
-					<artifactId>bukkit</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+    <dependencies>
 
-		<!-- WorldGuard API -->
-		<dependency>
-			<groupId>com.sk89q.worldguard</groupId>
-			<artifactId>worldguard-legacy</artifactId>
-			<version>7.0.0-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
 
-		<!-- ViaVersion API -->
-		<dependency>
-			<groupId>us.myles</groupId>
-			<artifactId>viaversion</artifactId>
-			<version>2.0.1</version>
-		</dependency>
+        <!--Spigot API-->
+        <!--You only need one of the two, don't put both. Spigot is recommended.-->
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.14.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
 
-		<!-- Sentinel API -->
-		<dependency>
-			<groupId>org.mcmonkey</groupId>
-			<artifactId>sentinel</artifactId>
-			<version>1.8.5</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
 
-		<!-- ProtocolLib -->
-		<dependency>
-			<groupId>com.comphenix.protocol</groupId>
-			<artifactId>ProtocolLib</artifactId>
-			<version>4.4.0</version>
-		</dependency>
+        <!-- Vault API -->
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bukkit</groupId>
+                    <artifactId>bukkit</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
-		<!-- Citzens -->
-		<dependency>
-			<groupId>net.citizensnpcs</groupId>
-			<artifactId>citizens</artifactId>
-			<version>2.0.24-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+        <!-- WorldGuard API -->
+        <dependency>
+            <groupId>com.sk89q.worldguard</groupId>
+            <artifactId>worldguard-legacy</artifactId>
+            <version>7.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
 
-		<!-- Parties -->
-		<dependency>
-			<groupId>com.github.AlessioDP.Parties</groupId>
-			<artifactId>parties-api</artifactId>
-			<version>2.5.1</version>
-		</dependency>
+        <!-- ViaVersion API -->
+        <dependency>
+            <groupId>us.myles</groupId>
+            <artifactId>viaversion</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
-		<!-- PluginConstructorAPI -->
-		<dependency>
-			<groupId>me.zombie_striker</groupId>
-			<artifactId>pluginconstructor</artifactId>
-			<version>1.0.50</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/libs/PluginConstructorAPI.jar</systemPath>
-		</dependency>
+        <!-- Sentinel API -->
+        <dependency>
+            <groupId>org.mcmonkey</groupId>
+            <artifactId>sentinel</artifactId>
+            <version>1.8.5</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
 
-		<!-- LightAPI -->
-		<dependency>
-			<groupId>ru.beykerykt</groupId>
-			<artifactId>LightAPI</artifactId>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/libs/LightAPI.jar</systemPath>
-			<version>3.2.7</version>
-		</dependency>
+        <!-- ProtocolLib -->
+        <dependency>
+            <groupId>com.comphenix.protocol</groupId>
+            <artifactId>ProtocolLib</artifactId>
+            <version>4.4.0</version>
+        </dependency>
 
-	</dependencies>
+        <!-- Citzens -->
+        <dependency>
+            <groupId>net.citizensnpcs</groupId>
+            <artifactId>citizens</artifactId>
+            <version>2.0.24-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
 
-	<build>
-		<finalName>${project.name}</finalName>
-		<defaultGoal>install</defaultGoal>
-		<!-- Uses the properties in this file for plugin.yml and config.yml -->
-		<resources>
-			<resource>
-				<directory>${basedir}/src/main/resources</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>plugin.yml</include>
-					<include>config.yml</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<!-- Sets the Java version to 8 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+        <!-- Parties -->
+        <dependency>
+            <groupId>com.github.AlessioDP.Parties</groupId>
+            <artifactId>parties-api</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
+        <!-- PluginConstructorAPI -->
+        <dependency>
+            <groupId>me.zombie_striker</groupId>
+            <artifactId>pluginconstructor</artifactId>
+            <version>1.0.50</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/PluginConstructorAPI.jar</systemPath>
+        </dependency>
+
+        <!-- LightAPI -->
+        <dependency>
+            <groupId>ru.beykerykt</groupId>
+            <artifactId>LightAPI</artifactId>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/LightAPI.jar</systemPath>
+            <version>3.2.7</version>
+        </dependency>
+
+    </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Temporary Staging Repository</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
+    <!--<properties>
+        <!- github server corresponds to entry in ~/.m2/settings.xml - ->
+        <github.global.server>github</github.global.server>
+    </properties>-->
+    <build>
+        <finalName>${project.name}</finalName>
+        <defaultGoal>install</defaultGoal>
+        <!-- Uses the properties in this file for plugin.yml and config.yml -->
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>plugin.yml</include>
+                    <include>config.yml</include>
+                </includes>
+            </resource>
+        </resources>
+
+        <plugins>
+            <!-- Sets the Java version to 8 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
+                    </altDeploymentRepository>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.11</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+                    <noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+                    <outputDirectory>${project.build.directory}/mvn-repo
+                    </outputDirectory> <!-- matches distribution management repository url above -->
+                    <branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                    <repositoryName>QualityArmory</repositoryName>      <!-- github repo name -->
+                    <repositoryOwner>ZombieStriker</repositoryOwner>    <!-- github username  -->
+                </configuration>
+                <executions>
+                    <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
