--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>qg</artifactId>
-    <version>1.1.139</version>
+    <version>1.1.140</version>
     <name>QualityArmory</name>
 
     <repositories>
@@ -177,6 +177,14 @@
                 <includes>
                     <include>plugin.yml</include>
                     <include>config.yml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src</directory>
+                <targetPath>src</targetPath>
+                <includes>
+                    <include>**/*.java</include>
+                    <include>**/*.gwt.xml</include>
                 </includes>
             </resource>
         </resources>
