1、Change itemRegister to LinkedHashMap. 2、Fix enableCreationOfFiles can't disable. 3、Support SunLight-Core's economy.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -29,6 +29,6 @@ permissions:
       qualityarmory.craft: true
       qualityarmory.shop: true
       qualityarmory.usegun: true
-softdepend: [Vault, Parties, WorldGuard, ViaVersion, ViaRewind, LightAPI, Citizens, ProtocolLib]
+softdepend: [Vault, Parties, WorldGuard, ViaVersion, ViaRewind, LightAPI, Citizens, ProtocolLib, SunLight-Core]
 author:
    Zombie_Striker
