--- a/pom.xml
+++ b/pom.xml
@@ -63,14 +63,22 @@
     </repositories>
 
     <dependencies>
+        <!-- MCAPI -->
+        <dependency>
+            <groupId>com.mojang</groupId>
+            <artifactId>authlib</artifactId>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/authlib-1.5.25.jar</systemPath>
+            <version>1.5.25</version>
+        </dependency>
 
 
         <!--Spigot API-->
         <!--You only need one of the two, don't put both. Spigot is recommended.-->
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.14.2-R0.1-SNAPSHOT</version>
+            <artifactId>spigot-api</artifactId>
+            <version>1.14.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -200,6 +208,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.1</version>
