--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
                 </configuration>
             </plugin>
 
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.4</version>
@@ -219,6 +219,7 @@
                 </configuration>
 
             </plugin>
+-->
 
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
