stupid bug fix. 囧rz

--- a/pom.xml
+++ b/pom.xml
@@ -181,11 +181,9 @@
         <resources>
             <resource>
                 <directory>${basedir}/src/main/resources</directory>
-                <filtering>false</filtering>
+                <filtering>true</filtering>
                 <includes>
-                    <include>plugin.yml</include>
-                    <include>config.yml</include>
-                    <include>lang/*.yml</include>
+                    <include>**/*.yml</include>
                 </includes>
             </resource>
             <resource>
