!!! WARNING !!! This submission was ONLY TESTED by MC1.14.4(Paper-167), almost REWRITING the logic of all guns, including aiming, loading, automatic shooting, burst mode, etc.
Gun attributes modify:
- All gun can use AutoFire-Mode. Including Burst-Fire mode charger.
- Only has "enableBetterModelScopes=true" will use IronSight like Sniper rifle.
- Burst-Fire mode charger only can shoot 1 bullet in one shot, "bullets-per-shot" use control how many times to shot in one pull the trigger.

Global modify:
- If player offhand holding something like shield, now will put it to backpack if enable IronSights, or drop it if backpack full, including shopping/crafting.
- RMB click will shot if "enableReloadOnlyWhenSwapToOffhand=true" and "IronSightsOnRightClick=false".
- "SwapSneakToSingleFile=true" will make Gun's AutoFire[Shift+LMB/RMB] lose its effect.
- Try to drop a gun in aiming, now will cancel aiming, and clean all illegal IronSights.
- Lore will show the charger type use Message_xx.yml.
- The store now has a new control item that controls whether items on the player can be clicked to shop/craft.
- More message item about gun's Help lore.

Last, I very like this plugin, I hope these things are helpful.
Forgive my Chinglish. This is already my limit. :)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -129,7 +129,9 @@ enableExplosionDamageDrop: false
 
 # Enables the shop and crafting menu.
 enableCrafting: true
+enableCraftingIgnoreBackpack: true
 enableShop: true
+enableShopIgnoreBackpack: true
 
 # Determines if the plugin should auto-update. Disable this if you need a specific version of QA.
 AUTO-UPDATE: true
